<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contentView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/composeBackground"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/messageList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:paddingTop="8dp"
        android:paddingBottom="24dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@id/composeBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:reverseLayout="false"
        app:stackFromEnd="true"
        tools:listitem="@layout/message_list_item_in" />


    <View
        android:id="@+id/sendAsGroupShadow"
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/ab_shadow"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <View
        android:id="@+id/messageBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_rectangle_22dp"
        android:backgroundTint="?attr/bubbleColor"
        android:elevation="4dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/attach"
        app:layout_constraintTop_toTopOf="@id/message" />


    <View
        android:id="@+id/composeBackground"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/compose_bar_background"
        android:backgroundTint="?attr/composeBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/messageBackground" />


    <EditText
        android:id="@+id/message"
        style="@style/TextPrimary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_weight="1"
        android:background="@drawable/rounded_rectangle_22dp"
        android:elevation="4dp"
        android:gravity="center_vertical"
        android:hint="@string/compose_hint"
        android:inputType="textLongMessage|textCapSentences|textMultiLine"
        android:maxLines="6"
        android:minHeight="44dp"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColorHint="?android:attr/textColorTertiary"
        app:layout_constraintBottom_toBottomOf="@id/messageBackground"
        app:layout_constraintEnd_toStartOf="@id/sim"
        app:layout_constraintStart_toStartOf="@id/messageBackground" />


    <ImageView
        android:id="@+id/sim"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/compose_sim_cd"
        android:elevation="4dp"
        android:padding="10dp"
        android:src="@drawable/ic_sim_card_black_24dp"
        android:tint="?android:attr/textColorSecondary"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/messageBackground"
        app:layout_constraintEnd_toStartOf="@id/send" />

    <TextView
        android:id="@+id/simIndex"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:elevation="4dp"
        android:gravity="center"
        android:textColor="?android:attr/textColorPrimaryInverse"
        android:textSize="14dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@id/sim"
        app:layout_constraintEnd_toEndOf="@id/sim"
        app:layout_constraintStart_toStartOf="@id/sim"
        app:layout_constraintTop_toTopOf="@id/sim"
        tools:ignore="SpUsage"
        tools:text="1" />

    <TextView
        android:id="@+id/counter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:elevation="4dp"
        android:gravity="center"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintBottom_toTopOf="@id/send"
        app:layout_constraintEnd_toEndOf="@id/send"
        app:layout_constraintStart_toStartOf="@id/send"
        tools:text="108 / 2" />

    <ImageView
        android:id="@+id/send"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:background="@drawable/rounded_rectangle_22dp_perrywinkle"
        android:contentDescription="@string/compose_send_cd"
        android:elevation="4dp"
        android:padding="10dp"
        android:src="@drawable/ic_send"
        android:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@id/messageBackground"
        app:layout_constraintEnd_toEndOf="@id/messageBackground"
        tools:backgroundTint="@color/tools_theme" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/Toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constrainedHeight="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_max="140dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_arrow_back_primary" />

    <AutoCompleteTextView
        android:id="@+id/etAutoComplete"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_recipient"
        app:layout_constraintTop_toBottomOf="@+id/sendAsGroupShadow" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/ab_shadow"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />


    <ImageView
        android:id="@+id/attach"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/compose_attach_cd"
        android:elevation="4dp"
        android:padding="10dp"
        android:src="@drawable/ic_add_black_24dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:backgroundTint="@color/tools_theme"
        tools:tint="@color/textPrimaryDark" />

</androidx.constraintlayout.widget.ConstraintLayout>